// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grid > should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 100px; height: 50px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render 4x4 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 400px; height: 180px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render 100x100 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 10000px; height: 4020px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render 1000x1000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 100000px; height: 40020px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render 10000x10000 children 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 1000000px; height: 400020px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render component 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 10000px; height: 4020px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render fragments 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 100px; height: 100px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render non elements 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100%; height: 100%;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 100px; height: 260px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        string
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`grid > should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto; contain: strict; width: 100px; height: 100px;"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 400px; height: 180px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="overflow: auto; contain: strict; width: 100%; height: 100%; background: red;"
    tabindex="0"
  >
    <div
      style="overflow-anchor: none; flex: 0 0 auto; position: relative; visibility: hidden; width: 10000px; height: 4020px;"
    >
      <div
        style="display: grid; position: absolute; top: 0px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 0px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          0 / 1
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 0px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 0
        </div>
      </div>
      <div
        style="display: grid; position: absolute; top: 50px; left: 100px; visibility: visible; min-height: 50px; min-width: 100px;"
      >
        <div>
          1 / 1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
